use script; add record memory usage; can connect to (ZhouShengit add --all) server; ...